@@ -1,3 +1,7 @@
+Fri Apr 22 09:32:50 2005  Nick Burrett  <nick@sqrt.co.uk>
+
+	* dirent.h (alphasort): Change to BSD and MISC visibility.
+
 Thu Apr 21 16:53:32 2005  Nick Burrett  <nick@sqrt.co.uk>
 
 	Norcroft compatibility.
